Implementando: Envio de email, StringtoDate para campos do banco.

--- a/api/views/mail/expired_contract.hbs
+++ b/api/views/mail/expired_contract.hbs
@@ -992,7 +992,7 @@ END OF IMPORTANT
                                         <tr class="ui-draggable">
                                           <td align="center"
                                             class="esd-block-text esd-frame esd-hover esdev-disable-select esd-block">
-                                            <p>O contrato abaixo venceu, seu estado foi alterado para Expirado&nbsp;.
+                                            <p>O contrato abaixo venceu, seu estado foi alterado para Expirado.
                                             </p>
                                           </td>
                                         </tr>
@@ -1022,17 +1022,19 @@ END OF IMPORTANT
                                       <tbody class="ui-droppable">
                                         <tr>
                                           <th>Objeto:</th>
-                                          <td colspan="6">{{ objeto }}</td>
+                                          <td colspan="4">{{ objeto }}</td>
                                         </tr>
                                         <tr>
                                           <th>Parceiro:</th>
-                                          <td colspan="6">{{ parceiro }}</td>
+                                          <td colspan="4">{{ parceiro }}</td>
                                         </tr>
                                         <tr>
                                           <th>CNPJ/CPF:</th>
                                           <td>{{ cnpj }}</td>
                                           <th>Natureza:</th>
                                           <td>{{ natureza }}</td>
+                                        </tr>
+                                        <tr>
                                           <th>Depto.:</th>
                                           <td>{{ deptoResponsavel }}</td>
                                         </tr>
@@ -1040,7 +1042,7 @@ END OF IMPORTANT
                                           <th>Data Início:</th>
                                           <td>{{ dataInicio }}</td>
                                           <th>Data Fim:</th>
-                                          <td colspan="2">{{ dataFim }}</td>
+                                          <td>{{ dataFim }}</td>
                                         </tr>
                                       </tbody>
                                       <!--<tbody>-->
