Implementando: envio de email para contratos vencidos.

--- a/api/views/mail/expired_contract.hbs
+++ b/api/views/mail/expired_contract.hbs
@@ -942,12 +942,12 @@ END OF IMPORTANT
                                               <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" stripoVmlButton href="http://192.168.0.124:8081" 
                                                             style="height:46px;v-text-anchor:middle;width:187px;" arcsize="11%" stroke="f" fillcolor="#002240">
                                                 <w:anchorlock></w:anchorlock>
-                                                <center style='color:#ffffff;font-family:roboto, "helvetica neue", helvetica, arial, sans-serif;font-size:18px;font-weight:400;'>ABRIR CONTRATO</center>
+                                                <center style='color:#ffffff;font-family:roboto, "helvetica neue", helvetica, arial, sans-serif;font-size:18px;font-weight:400;'>ABRIR CONTRATOS</center>
                                               </v:roundrect></a>
                                             <![endif]-->
                                             <!--[if !mso]><!-- --><span class="msohide es-button-border"><a
                                                 href="http://192.168.0.124:8081/contratos" class="es-button" target="_blank"
-                                                style="font-weight: normal;">ABRIR CONTRATO</a></span>
+                                                style="font-weight: normal;">ABRIR CONTRATOS</a></span>
                                             <!--<![endif]-->
                                           </td>
                                         </tr>
@@ -1081,7 +1081,7 @@ END OF IMPORTANT
                                     <table class="table2" width="100%" cellspacing="0" cellpadding="0">
                                       <tbody>
                                         <tr>
-                                          <th>Estado:</th>
+                                          <th><i>Status:</i></th>
                                           <td>{{ status }}</td>
                                         </tr>
                                       </tbody>
