Implementado: Configurações MongoDB Implementado: Campo virtual id resumido para contrato Refatorado: Alguns trechos de controller para envio de email

--- a/api/views/mail/expired_contract.hbs
+++ b/api/views/mail/expired_contract.hbs
@@ -871,7 +871,7 @@ END OF IMPORTANT
                                         <tr class="ui-draggable">
                                           <td align="right"
                                             class="es-infoblock esd-block-text es-m-txt-r esd-frame esd-hover esdev-disable-select esd-block">
-                                            <p><a href="http://192.168.0.124:8081" target="_blank" class="view">Abrir no
+                                            <p><a href="http://192.168.0.123" target="_blank" class="view">Abrir no
                                                 navegador</a></p>
                                           </td>
                                         </tr>
@@ -938,16 +938,16 @@ END OF IMPORTANT
                                           <td
                                             class="esd-block-button es-p10t es-p10b es-m-txt-c esd-frame esd-hover esdev-disable-select esd-block"
                                             align="right">
-                                            <!--[if mso]><a href="http://192.168.0.124:8081" target="_blank">
-                                              <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" stripoVmlButton href="http://192.168.0.124:8081" 
+                                            <!--[if mso]><a href="http://192.168.0.123" target="_blank">
+                                              <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" stripoVmlButton href="http://192.168.0.123" 
                                                             style="height:46px;v-text-anchor:middle;width:187px;" arcsize="11%" stroke="f" fillcolor="#002240">
                                                 <w:anchorlock></w:anchorlock>
-                                                <center style='color:#ffffff;font-family:roboto, "helvetica neue", helvetica, arial, sans-serif;font-size:18px;font-weight:400;'>ABRIR CONTRATOS</center>
+                                                <center style='color:#ffffff;font-family:roboto, "helvetica neue", helvetica, arial, sans-serif;font-size:18px;font-weight:400;'>CONTRATOS</center>
                                               </v:roundrect></a>
                                             <![endif]-->
                                             <!--[if !mso]><!-- --><span class="msohide es-button-border"><a
-                                                href="http://192.168.0.124:8081/contratos" class="es-button" target="_blank"
-                                                style="font-weight: normal;">ABRIR CONTRATOS</a></span>
+                                                href="http://192.168.0.123/contratos" class="es-button" target="_blank"
+                                                style="font-weight: normal;">CONTRATOS</a></span>
                                             <!--<![endif]-->
                                           </td>
                                         </tr>
@@ -1015,7 +1015,7 @@ END OF IMPORTANT
                                   <td width="580" class="esd-container-frame esd-frame esd-hover esdev-disable-select"
                                     align="center" valign="top">
                                     <thread>
-                                      {{ _id }}
+                                      ID - {{ id }}
                                     </thread>
                                     <table class="table1" cellpadding="4" cellspacing="1" width="100%"
                                       bgcolor="#ffffff">
@@ -1081,7 +1081,8 @@ END OF IMPORTANT
                                     <table class="table2" width="100%" cellspacing="0" cellpadding="0">
                                       <tbody>
                                         <tr>
-                                          <th><i>Status:</i></th>
+                                          <th colspan="2"><i>Status</i> Anterior:</th>
+                                          <td></td>
                                           <td>{{ status }}</td>
                                         </tr>
                                       </tbody>
