Implementado  - Formatação SID de usuários AD. Refatorado  - EndPoint que retorna usuários do AD.

--- a/api/views/mail/expiring_contract.hbs
+++ b/api/views/mail/expiring_contract.hbs
@@ -994,7 +994,8 @@ END OF IMPORTANT
                                             class="esd-block-text esd-frame esd-hover esdev-disable-select esd-block">
                                             <p>
                                               Lembrete de contrato à vencer, nos pediu que te avisássemos com 
-                                              {{ diaAntecedencia }} dias de antecedência. Obrigado.
+                                              {{ diaAntecedencia }} dias de antecedência e após a cada 30 dias.
+                                              Obrigado.
                                             </p>
                                           </td>
                                         </tr>
