Implementado  - Envio de alertas regulares.

--- a/api/views/mail/indeterminate_contract.hbs
+++ b/api/views/mail/indeterminate_contract.hbs
@@ -938,8 +938,8 @@ END OF IMPORTANT
                                           <td
                                             class="esd-block-button es-p10t es-p10b es-m-txt-c esd-frame esd-hover esdev-disable-select esd-block"
                                             align="right">
-                                            <!--[if mso]><a href="http://192.168.0.123" target="_blank">
-                                              <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" stripoVmlButton href="http://192.168.0.123" 
+                                            <!--[if mso]><a href="http://192.168.0.123/contratos" target="_blank">
+                                              <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" stripoVmlButton href="http://192.168.0.123/contratos" 
                                                             style="height:46px;v-text-anchor:middle;width:187px;" arcsize="11%" stroke="f" fillcolor="#002240">
                                                 <w:anchorlock></w:anchorlock>
                                                 <center style='color:#ffffff;font-family:roboto, "helvetica neue", helvetica, arial, sans-serif;font-size:18px;font-weight:400;'>CONTRATOS</center>
@@ -994,7 +994,7 @@ END OF IMPORTANT
                                             class="esd-block-text esd-frame esd-hover esdev-disable-select esd-block">
                                             <p>
                                               Lembrete de contrato indeterminado, nos pediu que te avisássemos com 
-                                              {{ diaAntecedencia }} dias de antecedência antes de completar um ano. 
+                                              {{ diaAntecedencia }} dia(s) de antecedência antes de completar um ano. 
                                               Obrigado.
                                             </p>
                                           </td>
