Fix  - Envio de email na primeira hora do dia. Refatorado  - Metodo de envio de email regulares para ser reutilizado.

--- a/api/views/mail/regularly_contract.hbs
+++ b/api/views/mail/regularly_contract.hbs
@@ -994,7 +994,7 @@ END OF IMPORTANT
                                             class="esd-block-text esd-frame esd-hover esdev-disable-select esd-block">
                                             <p>
                                               Lembrete de contrato à vencer, nos pediu que te avisássemos a 
-                                              cada {{ sendEmailRegularly }} dia(s). Fique tranquilo te avisaremos 
+                                              cada {{ regularitySendMail }} dia(s). Fique tranquilo te avisaremos 
                                               novamente em {{ dateSendNextEmail }} caso o contrato não esteja vencido. 
                                               Obrigado.
                                             </p>
