--- a/api/views/mail/expiring_contract.hbs
+++ b/api/views/mail/expiring_contract.hbs
@@ -994,7 +994,7 @@ END OF IMPORTANT
                                             class="esd-block-text esd-frame esd-hover esdev-disable-select esd-block">
                                             <p>
                                               Lembrete de contrato à vencer, nos pediu que te avisássemos com 
-                                              {{ diaAntecedencia }} dia(s) de antecedência e após a cada {{ sendEmailRegularly }} dia(s).
+                                              {{ diaAntecedencia }} dia(s) de antecedência e após a cada {{ regularitySendMail }} dia(s).
                                               Fique tranquilo, te avisaremos novamente em {{ dateSendNextEmail }}.
                                               Obrigado.
                                             </p>
